--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - ./pgdata:/var/lib/postgresql/data
   migration:
     image: boxfuse/flyway
+    networks: 
+      - app
     command: -url=jdbc:postgresql://postgres:5432/jellyfish -user=postgres -password=${JELLYFISH_DB_PASSWORD} migrate
     volumes:
       - ./jellyfish/sql:/flyway/sql 
